--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,8 @@ header {
   margin-bottom: 20px;
 }
 .container {
-  max-width: 100%;
-  border: solid black;
+  width: 100%;
+  border: solid rgb(191, 215, 236);
   border-radius: 10px;
   margin-top: 20px;
   padding-bottom: 12px;
@@ -45,5 +45,22 @@ header {
   border-radius: 15px;
 }
 .body-style {
-  background: rgb(208, 195, 231);
+  background-image: url("/Users/eloiza/Documents/SheCodes Eloiza/Weather-App-Eloiza/weather-app/src/pexels-miguel-á-padriñán-19670.jpg");
+  width: 800px;
+  display: block;
+  margin: 0 auto;
+}
+.source-link {
+  text-decoration: none;
+  text-align: center;
+}
+.current-location-bt {
+  display: block;
+  margin: 0 auto;
+}
+.icon {
+  width: 20px;
+}
+.weekgrid {
+  background: wheat;
 }
