--- a/src/style.css
+++ b/src/style.css
@@ -64,3 +64,19 @@ header {
 .weekgrid {
   background: wheat;
 }
+li {
+  list-style: none;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  margin-top: 30px;
+}
+h1 {
+  padding-top: 20px;
+}
+.weather-temperature svg {
+  width: 90px;
+  margin-left: 20px;
+}
