--- a/src/style.css
+++ b/src/style.css
@@ -28,14 +28,11 @@ header {
 }
 .container {
   width: 100%;
-  border: solid rgb(191, 215, 236);
-  border-radius: 10px;
   margin-top: 20px;
   padding-bottom: 12px;
-  background: rgb(191, 215, 236);
-  box-shadow: rgba(205, 233, 235, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 74px;
+  background: linear-gradient(225deg, #b9d3df, #dcfaff);
+  box-shadow: -31px 31px 54px #8c9fa9, 31px -31px 54px #ffffff;
 }
 .temperature-grid {
   margin-top: 60px;
