removed console.log

--- a/src/style.css
+++ b/src/style.css
@@ -63,9 +63,10 @@ header {
 }
 li {
   list-style: none;
+}
+li::first-letter {
   text-transform: capitalize;
 }
-
 ul {
   padding: 0;
   margin: 0;
