added icon and changed attribute(set.attribute) thorough JS

--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ header {
   border-radius: 15px;
 }
 .body-style {
-  background-image: url("/src/pexels-eberhard-grossgasteiger-1287142.jpg");
+  background-image: url("src/pexels-eberhard-grossgasteiger-1287142.jpg");
   width: 800px;
   display: block;
   margin: 0 auto;
@@ -59,7 +59,7 @@ header {
   width: 20px;
 }
 .weekgrid {
-  background: wheat;
+  background: rgb(222, 214, 198);
 }
 li {
   list-style: none;
@@ -78,7 +78,4 @@ h1 {
 .weather-temperature svg {
   width: 90px;
   margin-left: 20px;
-}
-svg {
-  color: #3f9aae;
 }
