--- a/src/style.css
+++ b/src/style.css
@@ -17,10 +17,11 @@ header {
   margin-bottom: 20px;
 }
 .container {
-  width: 100%;
+  height: 400px;
+  width: 600px;
   margin-top: 20px;
   padding-bottom: 12px;
-  border-radius: 74px;
+  border-radius: 54px;
   background: rgb(10, 32, 60);
   background: linear-gradient(
     0deg,
@@ -61,7 +62,7 @@ header {
 }
 
 .weekgrid {
-  background: rgb(222, 214, 198);
+  text-align: center;
 }
 li {
   list-style: none;
@@ -76,4 +77,7 @@ ul {
 }
 h1 {
   padding-top: 20px;
+}
+.temperature {
+  font-size: 70px;
 }
