--- a/src/style.css
+++ b/src/style.css
@@ -90,7 +90,7 @@ h1 {
   font-family: "Montserrat Alternates", sans-serif;
   font-weight: bolder;
 }
-.celsius {
+.units {
   font-size: 20px;
   position: relative;
   top: -30px;
