--- a/src/style.css
+++ b/src/style.css
@@ -24,14 +24,14 @@
   background: rgb(10, 32, 60);
   background: linear-gradient(
     0deg,
-    rgba(10, 32, 60, 1) 0%,
-    rgba(32, 82, 139, 1) 10%,
-    #527da4 17%,
-    rgba(80, 131, 172, 1) 23%,
-    rgba(167, 220, 233, 1) 48%,
-    rgba(180, 233, 242, 1) 55%,
-    rgba(198, 252, 255, 1) 69%,
-    rgba(219, 240, 241, 1) 85%,
+    rgb(8, 19, 33) 0%,
+    rgb(99, 125, 157) 15%,
+    #577ea3 18%,
+    rgb(83, 124, 158) 27%,
+    rgba(167, 220, 233, 1) 43%,
+    rgba(180, 233, 242, 1) 50%,
+    rgba(198, 252, 255, 1) 60%,
+    rgba(219, 240, 241, 1) 81%,
     rgba(219, 228, 241, 1) 94%,
     rgb(216, 211, 227) 98%
   );
