--- a/src/style.css
+++ b/src/style.css
@@ -21,19 +21,13 @@
   margin-top: 20px;
   padding-bottom: 12px;
   border-radius: 54px;
-  background: rgb(10, 32, 60);
+  background: rgb(157, 115, 75);
   background: linear-gradient(
     0deg,
-    rgb(8, 19, 33) 0%,
-    rgb(99, 125, 157) 15%,
-    #577ea3 18%,
-    rgb(83, 124, 158) 27%,
-    rgba(167, 220, 233, 1) 43%,
-    rgba(180, 233, 242, 1) 50%,
-    rgba(198, 252, 255, 1) 60%,
-    rgba(219, 240, 241, 1) 81%,
-    rgba(219, 228, 241, 1) 94%,
-    rgb(216, 211, 227) 98%
+    rgba(157, 115, 75, 1) 0%,
+    rgba(224, 166, 91, 1) 10%,
+    rgba(235, 172, 120, 1) 33%,
+    rgba(251, 237, 226, 1) 100%
   );
   box-shadow: -31px 31px 54px #8c9fa9, 31px -31px 54px #ffffff;
 }
