--- a/src/style.css
+++ b/src/style.css
@@ -1,77 +1,67 @@
+:root {
+  --orange-color: #e8822d;
+  --salmon-color: #eda082;
+  --yellow-color: #d9a735;
+  --purple-color: #c7b9c5;
+  --peach-color: #edccb6;
+}
 .date {
   font-size: 25px;
   font-family: "Montserrat Alternates", sans-serif;
   font-weight: 900;
-  color: rgb(251, 248, 248);
+  color: black;
   padding-bottom: 10px;
 }
 
+body {
+  background-color: var(--purple-color);
+  font-family: "Dosis", sans-serif;
+}
 .location-bar {
   margin-top: 34px;
   display: flex;
   justify-content: center;
 }
 .container {
-  height: 550px;
-  width: 620px;
-  margin-top: 20px;
+  height: 500px;
+  width: 600px;
+  margin-top: 70px;
   padding-bottom: 12px;
-  border-radius: 54px;
-  box-shadow: -31px 31px 54px #8c9fa9, 31px -31px 54px #ffffff;
-  background: rgb(214, 138, 74);
-  background: linear-gradient(
-    0deg,
-    rgba(214, 138, 74, 0.9542410714285714) 0%,
-    rgba(210, 118, 64, 0.9598433123249299) 5%,
-    rgba(226, 123, 65, 0.9934567577030813) 19%,
-    rgba(236, 131, 48, 1) 31%,
-    rgba(246, 145, 63, 0.9766500350140056) 57%,
-    rgba(236, 180, 136, 1) 86%,
-    rgba(233, 191, 158, 1) 100%
-  );
+  border-radius: 5px;
+  background: var(--peach-color);
+  border: 1px solid black;
 }
 .temperature-grid {
   margin-top: 60px;
   border: none;
 }
-.body-style {
-  background: #a5bad9;
-  background: -webkit-linear-gradient(to right, #b6fbff, #8aa3c8);
-  background: linear-gradient(to right, #b9edf0, #87a3ce);
-  width: 800px;
-  display: block;
-  margin: 0 auto;
-}
+
 .source-link {
   text-decoration: none;
   display: flex;
   justify-content: center;
   padding: 20px;
-  font-family: "Montserrat Alternates", sans-serif;
   font-weight: 900;
-  color: rgb(251, 248, 248);
+  color: white;
 }
-.current-location-bt {
-  display: block;
-  margin: 0 auto;
-}
-.current-location-bt:hover {
-  background: #f29953;
-  color: #ffffff;
+
+button:hover {
+  background: var(--purple-color);
+  color: black;
 }
 
 .forecast-grid {
   display: flex;
   justify-content: center;
   font-weight: 500;
-  color: rgb(251, 248, 248);
+  color: black;
   margin-left: 80px;
 }
 li {
   list-style: none;
   font-family: "Montserrat Alternates", sans-serif;
   font-weight: 900;
-  color: rgb(251, 248, 248);
+  color: black;
   position: relative;
   top: -30px;
 }
@@ -86,13 +76,13 @@ h1 {
   padding-top: 30px;
   font-family: "Montserrat Alternates", sans-serif;
   font-weight: 900;
-  color: rgb(251, 248, 248);
+  color: black;
 }
 .temperature {
   font-size: 70px;
   text-align: center;
   font-weight: 900;
-  color: rgb(251, 248, 248);
+  color: black;
   font-family: "Montserrat Alternates", sans-serif;
   position: relative;
   bottom: -50px;
@@ -113,42 +103,37 @@ a {
 button {
   width: 150px;
   height: 50px;
-  background: #83a4d4;
-  background: -webkit-linear-gradient(to right, #bee7e9, #a0b3d0);
-  background: linear-gradient(to right, #b6fbff, #a8b8d0);
-  color: #5c270d;
-  border-radius: 50px;
-  border: none;
-  outline: none;
-  cursor: pointer;
+  background: var(--salmon-color);
+  color: black;
+  border-radius: 5px;
+  border: 1px solid black;
   position: relative;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 900;
+  margin-top: 10px;
 }
 input {
   font-size: 15px;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 55px 5px 5px;
   display: block;
-  width: 150px;
   border: none;
-  border-bottom: 1px solid rgb(242, 245, 247);
+  border-bottom: 2px solid black;
   background: transparent;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 900;
-  color: rgb(251, 248, 248);
+}
+.search-location-bar {
+  width: 50px;
+  font-size: 10px;
+  padding: 5px 10px;
+}
+.form-location-bar {
+  width: 180px;
 }
 
-.form-location-bar {
-  width: 100px;
-}
-hr {
-  width: 500px;
-  display: block;
-  margin: 0 auto;
-  color: #ffffff;
-}
 div.col-2 {
   padding: 30px;
+}
+h3 {
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  border: 1px solid black;
+  background-color: var(--purple-color);
 }
