--- a/src/style.css
+++ b/src/style.css
@@ -23,8 +23,6 @@ body {
   justify-content: center;
 }
 .container {
-  height: 500px;
-  width: 600px;
   margin-top: 70px;
   padding-bottom: 12px;
   border-radius: 5px;
@@ -102,13 +100,16 @@ a {
 }
 button {
   width: 150px;
-  height: 50px;
+  height: 60px;
   background: var(--salmon-color);
   color: black;
   border-radius: 5px;
   border: 1px solid black;
-  position: relative;
-  margin-top: 10px;
+  display: block;
+  margin: 0 auto;
+}
+div.col-sm-6 {
+  margin-top: 30px;
 }
 input {
   font-size: 15px;
