--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,8 @@
 }
 .date {
   font-size: 25px;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 900;
+  margin-top: 30px;
   color: black;
-  padding-bottom: 10px;
 }
 
 body {
@@ -18,16 +16,19 @@ body {
   font-family: "Dosis", sans-serif;
 }
 .location-bar {
-  margin-top: 34px;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 }
+.container.text-center {
+  margin: 10px 20px 30px 40px;
+}
 .container {
   margin-top: 70px;
-  padding-bottom: 12px;
   border-radius: 5px;
   background: var(--peach-color);
-  border: 1px solid black;
+  border: 2px solid black;
+  width: max-content;
 }
 .temperature-grid {
   margin-top: 60px;
@@ -40,7 +41,7 @@ body {
   justify-content: center;
   padding: 20px;
   font-weight: 900;
-  color: white;
+  color: var(--orange-color);
 }
 
 button:hover {
@@ -49,54 +50,37 @@ button:hover {
 }
 
 .forecast-grid {
-  display: flex;
-  justify-content: center;
   font-weight: 500;
-  color: black;
-  margin-left: 80px;
 }
 li {
   list-style: none;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 900;
   color: black;
-  position: relative;
-  top: -30px;
+  padding: 5px;
 }
-
-ul {
-  padding: 0;
+div.row {
   margin: 0;
-  margin-top: 25px;
-  padding-bottom: 20px;
 }
 h1 {
-  padding-top: 30px;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 900;
+  padding-top: 10px;
+  font-weight: 700;
   color: black;
 }
 .temperature {
   font-size: 70px;
   text-align: center;
-  font-weight: 900;
-  color: black;
-  font-family: "Montserrat Alternates", sans-serif;
-  position: relative;
-  bottom: -50px;
+  font-weight: 300;
+  margin-top: 30px;
 }
 
 a {
   text-decoration: none;
-  font-family: "Montserrat Alternates", sans-serif;
   font-weight: 900;
   color: rgb(251, 248, 248);
 }
 .icon {
-  width: 90px;
-  height: 90px;
-  position: relative;
-  bottom: -30px;
+  vertical-align: middle;
+  width: 150px;
+  height: 150px;
 }
 button {
   width: 150px;
@@ -105,8 +89,7 @@ button {
   color: black;
   border-radius: 5px;
   border: 1px solid black;
-  display: block;
-  margin: 0 auto;
+  text-align: center;
 }
 div.col-sm-6 {
   margin-top: 30px;
@@ -132,9 +115,10 @@ div.col-2 {
   padding: 30px;
 }
 h3 {
-  text-align: center;
   font-size: 20px;
-  padding: 10px;
-  border: 1px solid black;
-  background-color: var(--purple-color);
+  border-bottom: 2px solid black;
+}
+div#forecast.forecast-grid {
+  margin: 0;
+  padding: 0;
 }
