--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,7 @@ h1 {
   padding-top: 10px;
   font-weight: 700;
   color: black;
+  font-size: 70px;
 }
 .temperature {
   font-size: 70px;
@@ -114,4 +115,7 @@ h3 {
 div#forecast.forecast-grid {
   margin: 0;
   padding: 0;
+}
+body {
+  background-color: #e8822d;
 }
