--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,20 @@
   --purple-color: #c7b9c5;
   --peach-color: #edccb6;
 }
+@media (max-width: 600px) {
+  .icon {
+    width: 100px;
+    height: 100px;
+  }
+  .plus-info {
+    padding: 0;
+  }
+  div.container.text-center {
+    padding: 0;
+    margin: 0;
+  }
+}
+
 .date {
   font-size: 24px;
   margin-top: 30px;
@@ -15,11 +29,13 @@
   display: flex;
   justify-content: center;
 }
-
+body {
+  background-color: aquamarine;
+}
 .container {
   margin-top: 70px;
   border-radius: 5px;
-  background: var(--peach-color);
+  background: transparent;
   border: 2px solid black;
   width: max-content;
 }
@@ -81,8 +97,7 @@ button {
   height: 60px;
   background: var(--salmon-color);
   color: black;
-  border-radius: 15px;
-  border: 1px solid black;
+  border: 2px solid black;
   text-align: center;
 }
 div.col-sm-6 {
@@ -115,7 +130,4 @@ h3 {
 div#forecast.forecast-grid {
   margin: 0;
   padding: 0;
-}
-body {
-  background-color: #e8822d;
 }
