--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,7 @@ a {
   vertical-align: middle;
   width: 80px;
   height: 80px;
+  filter: drop-shadow(0 0 15px white);
 }
 button {
   width: 150px;
