--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 button:hover {
-  background: #ba686e;
+  background: var(--dark-sky);
   color: white;
 }
 
@@ -105,7 +105,7 @@ h1 {
   padding-top: 10px;
   font-weight: 700;
   color: white;
-  font-size: 50px;
+  font-size: 40px;
 }
 .temperature {
   font-size: 70px;
@@ -168,10 +168,10 @@ div#forecast.forecast-grid {
   padding: 0;
   color: white;
 }
-li.city-info {
+ul li:not(:first-child) {
   color: white;
   background-color: #94466a;
   border-radius: 50px;
-  box-shadow: 5px 3px 10px #525e63, -5px -3px 10px #ffffff;
+  box-shadow: 5px 3px 10px var(--dark-sky), -5px 2px 10px var(--dark-sky);
   border-radius: 5px;
 }
